Resolved [AMZ-25]: Project setup
