# swagger_server/models/get_tool_titles_response.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.get_tool_titles_response_data import GetToolTitlesResponseData  # noqa: F401,E501
+from swagger_server import util
+
+
+class GetToolTitlesResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message: str=None, data: GetToolTitlesResponseData=None):  # noqa: E501
+        """GetToolTitlesResponse - a model defined in Swagger
+
+        :param message: The message of this GetToolTitlesResponse.  # noqa: E501
+        :type message: str
+        :param data: The data of this GetToolTitlesResponse.  # noqa: E501
+        :type data: GetToolTitlesResponseData
+        """
+        self.swagger_types = {
+            'message': str,
+            'data': GetToolTitlesResponseData
+        }
+
+        self.attribute_map = {
+            'message': 'message',
+            'data': 'data'
+        }
+
+        self._message = message
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetToolTitlesResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetToolTitlesResponse of this GetToolTitlesResponse.  # noqa: E501
+        :rtype: GetToolTitlesResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this GetToolTitlesResponse.
+
+
+        :return: The message of this GetToolTitlesResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this GetToolTitlesResponse.
+
+
+        :param message: The message of this GetToolTitlesResponse.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def data(self) -> GetToolTitlesResponseData:
+        """Gets the data of this GetToolTitlesResponse.
+
+
+        :return: The data of this GetToolTitlesResponse.
+        :rtype: GetToolTitlesResponseData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: GetToolTitlesResponseData):
+        """Sets the data of this GetToolTitlesResponse.
+
+
+        :param data: The data of this GetToolTitlesResponse.
+        :type data: GetToolTitlesResponseData
+        """
+
+        self._data = data
